--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/0031eed32e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,8 +25,8 @@
             <h3 class="banner-sub">Hi, I am</h3>
             <h1 class="banner-title">Mary Hardy</h1>
             <p class="banner-contain">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-            <button class="btn-primary">Download CV</button>
-            <button class="btn-contact">Contact</button>
+            <button class="btn-primary"> <i class="fa-solid fa-download"></i>  Download CV</button>
+            <button class="btn-contact"> <i class="fa-solid fa-phone"></i>  Contact</button>
         </div>
         <img src="hardy.png" >
     </div>
@@ -129,7 +130,7 @@
                 </div>
             </div>
             <div class="resume-btn">
-                <button class="download-cv" >Download CV</button>
+                <button class="download-cv" > <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section  -->
